Article alignment fix, featured img update

--- a/_sass/modules/_article.scss
+++ b/_sass/modules/_article.scss
@@ -6,6 +6,7 @@ article {
   @media screen and (min-width: #{ $max-width + 5 + 'em'}) {
     max-width: #{1.5 * $max-width * $base-desktop + 'px'};
     max-width: #{1.5 * $max-width + 'rem'};
+    margin: 0;
   }
 
 }
