--- a/_sass/modules/_image.scss
+++ b/_sass/modules/_image.scss
@@ -15,7 +15,7 @@ svg:not(:root) {
   max-width: 100%;
 
   @media screen and (min-width: $breakpoint) {
-    max-width: 557px;
+    max-width: 683px;
   }
 }
 
